[package]
name = "manzana-uno-emu"
version = "0.1.4"
edition = "2021"
authors = ["kromych@github.com"]
description = "Apple I emulator"
homepage = "https://github.com/kromych/manzana-uno-emu"
repository = "https://github.com/kromych/manzana-uno-emu"
readme = "README.md"
keywords = ["emulator", "6502", "apple1"]
categories = ["command-line-utilities", "emulators"]
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap-num = "1"
crossterm = "0.26"
crossbeam-channel = "0.5"
tracing ="0.1"
tracing-subscriber = "0.3"
yamos6502 = "0.1"
